# vola

./: .dockerignore  .gitignore  .golangci.yml  AGENTS.md  ALIYUN_ACR_TENCENT_DEPLOYMENT.md  Dockerfile  Makefile  NEUDRIVE_CUSTOM_DOMAIN_BAOTA.md  NEUDRIVE_CUSTOM_DOMAIN_NGINX.md  README.md  README.zh-CN.md  aliyun_scripts_search.json  docker-compose.yml  go.mod  go.sum  neudrive.env.example  scope_report.md  vola.env.example
desktop/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
desktop/.cargo/: config.toml
desktop/capabilities/: default.json
desktop/icons/: icon.icns
desktop/icons/android/values/: ic_launcher_background.xml
desktop/scripts/: build-backend-sidecar.mjs  check-desktop-runtime.mjs  seed-local-team-simulation.mjs
desktop/src/: lib.rs  main.rs
docs/: account-storage-mobile-sync.zh-CN.md  agent-activity-firewall-and-mcp-hosting-research.zh-CN.md  agent-data-hub-competitor-research.zh-CN.md  agent-data-hub-iteration-plan.zh-CN.md  agent-skill-targets.zh-CN.md  ai-multi-project-requirements-continuity-research.zh-CN.md  cli-test-matrix.md  cli.md  cli.zh-CN.md  core-principles.zh-CN.md  setup.md  (+31 more)
sdk/python/: README.md  pyproject.toml
sdk/python/neudrive/: __init__.py  auth.py  client.py
sdk/python/tests/: sync_fixture.py  test_sync_integration.py
sdk/python/vola/: __init__.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/scripts/: tauri-web-command.mjs
src-tauri/src/: lib.rs
(+383 files in other folders)
