[package]
name = "vola-desktop"
version = "0.1.0"
description = "Vola desktop application"
authors = ["Vola"]
edition = "2021"

[lib]
name = "vola_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vola-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
